tests/positive/pointer_field_write.ax
module pointer_field_write;

struct Pair {
    value: i32;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var pair: Pair = Pair { value: 1 };
    let ptr: *mut Pair = &pair;
    ptr.value = 42;
    return pair.value - 42;
}
