tests/negative/invalid_cast_pointer.ax
module invalid_cast_pointer;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var value: i32 = 1;
    let number: usize = cast(usize, &value);
    return cast(i32, number);
}
